use path as set argument in SettableVersion and use plugin description for QuestMigrator creation