@@ -17,85 +17,103 @@ import static org.mockito.Mockito.*;
  * Tests for Quest Migrations.
  */
 class QuestMigratorTest extends QuestFixture {
+    /**
+     * Version path.
+     */
+    private static final String VERSION_PATH = "package.version";
 
     @Test
-    void test_version_no_set() throws IOException, InvalidConfigurationException {
+    void version_no_set() throws IOException, InvalidConfigurationException {
         final Quest quest = setupQuest();
         final Version currentVersion = new Version("3.2.1-QUEST-5");
         final QuestMigrator migrator = new QuestMigrator(logger, Collections.emptyList(), Collections.emptyMap(), currentVersion);
         migrator.migrate(quest);
-        assertEquals(currentVersion.getVersion(), quest.getQuestConfig().getString("package.version"),
+        assertEquals(currentVersion.getVersion(), quest.getQuestConfig().getString(VERSION_PATH),
                 "The version should be set in the quest if none is present.");
-        assertEquals(currentVersion.getVersion(), loadPackageFile().getString("package.version"),
+        assertEquals(currentVersion.getVersion(), loadPackageFile().getString(VERSION_PATH),
                 "The version should be set in the file if none is present.");
     }
 
     @Test
-    void test_version_older_set() throws IOException, InvalidConfigurationException {
-        final Version qustVersion = new Version("2.2.1-QUEST-0");
-        original.set("package.version", qustVersion.getVersion());
+    void version_older_set() throws IOException, InvalidConfigurationException {
+        original.set(VERSION_PATH, "2.2.1-QUEST-0");
         final Quest quest = setupQuest();
-        final Version currentVersion = new Version("3.0.0-QUEST-0");
-        final QuestMigrator migrator = new QuestMigrator(logger, Collections.emptyList(), Collections.emptyMap(), currentVersion);
+        final Version fallback = new Version("3.0.0-QUEST-0");
+        final QuestMigrator migrator = new QuestMigrator(logger, Collections.emptyList(), Collections.emptyMap(), fallback);
         migrator.migrate(quest);
         quest.saveAll();
-        assertEquals(currentVersion.getVersion(), quest.getQuestConfig().getString("package.version"),
+        assertEquals(fallback.getVersion(), quest.getQuestConfig().getString(VERSION_PATH),
                 "Older versions should be updated in the quest.");
-        assertEquals(currentVersion.getVersion(), loadPackageFile().getString("package.version"),
+        assertEquals(fallback.getVersion(), loadPackageFile().getString(VERSION_PATH),
                 "Older versions should be updated in the file.");
     }
 
     @Test
-    void test_version_newer_set() throws IOException, InvalidConfigurationException {
+    void version_newer_set() throws IOException, InvalidConfigurationException {
         final Version qustVersion = new Version("3.0.1-QUEST-0");
-        original.set("package.version", qustVersion.getVersion());
+        original.set(VERSION_PATH, qustVersion.getVersion());
         final Quest quest = setupQuest();
-        final Version currentVersion = new Version("3.0.0-QUEST-0");
-        final QuestMigrator migrator = new QuestMigrator(logger, Collections.emptyList(), Collections.emptyMap(), currentVersion);
+        final Version fallback = new Version("3.0.0-QUEST-0");
+        final QuestMigrator migrator = new QuestMigrator(logger, Collections.emptyList(), Collections.emptyMap(), fallback);
         migrator.migrate(quest);
-        assertEquals(qustVersion.getVersion(), quest.getQuestConfig().getString("package.version"),
+        assertEquals(qustVersion.getVersion(), quest.getQuestConfig().getString(VERSION_PATH),
                 "Newer versions should not be changed in the quest.");
-        assertEquals(qustVersion.getVersion(), loadPackageFile().getString("package.version"),
+        assertEquals(qustVersion.getVersion(), loadPackageFile().getString(VERSION_PATH),
                 "Newer versions should not be changed in the file.");
     }
 
     @Test
-    void test_no_legacy_migration() throws IOException, InvalidConfigurationException {
-        final Version qustVersion = new Version("3.0.0-QUEST-0");
-        original.set("package.version", qustVersion.getVersion());
+    void no_legacy_migration() throws IOException, InvalidConfigurationException {
+        original.set(VERSION_PATH, "3.0.0-QUEST-0");
         final Quest quest = setupQuest();
-        final Version currentVersion = new Version("3.0.0-QUEST-1");
+        final Version fallback = new Version("3.0.0-QUEST-1");
         final QuestMigration mock = mock(QuestMigration.class);
-        final QuestMigrator migrator = new QuestMigrator(logger, Collections.singletonList(mock), Collections.emptyMap(), currentVersion);
+        final QuestMigrator migrator = new QuestMigrator(logger, Collections.singletonList(mock), Collections.emptyMap(), fallback);
         migrator.migrate(quest);
         verifyNoInteractions(mock);
     }
 
     @Test
-    void test_legacy_migration() throws IOException, InvalidConfigurationException {
+    void legacy_migration() throws IOException, InvalidConfigurationException {
+        original.set(VERSION_PATH, "legacy");
         final Quest quest = setupQuest();
-        final Version currentVersion = new Version("3.0.0-QUEST-1");
-        final QuestMigration mock = mock(QuestMigration.class);
-        final QuestMigrator migrator = new QuestMigrator(logger, Collections.singletonList(mock), Collections.emptyMap(), currentVersion);
+        final Version fallback = new Version("3.0.0-QUEST-1");
+        final QuestMigration legacy = mock(QuestMigration.class);
+        final QuestMigration versioned = mock(QuestMigration.class);
+        final Map<Version, QuestMigration> migrationMap = Map.of(new Version("2.3.4-QUEST-7"), versioned);
+        final QuestMigrator migrator = new QuestMigrator(logger, Collections.singletonList(legacy), migrationMap, fallback);
         migrator.migrate(quest);
-        verify(mock, times(1)).migrate(any());
+        verify(legacy, times(1)).migrate(any());
+        verify(versioned, times(1)).migrate(any());
     }
 
     @Test
-    void test_select_migration() throws IOException, InvalidConfigurationException {
-        final Version qustVersion = new Version("3.0.0-QUEST-0");
-        original.set("package.version", qustVersion.getVersion());
+    void select_migration() throws IOException, InvalidConfigurationException {
+        original.set(VERSION_PATH, "3.0.0-QUEST-0");
         final Quest quest = setupQuest();
         final QuestMigration older = mock(QuestMigration.class);
         final QuestMigration newer = mock(QuestMigration.class);
+        final Version newestMigrationVersion = new Version("3.0.1-QUEST-2");
         final Map<Version, QuestMigration> migrationMap = Map.of(
                 new Version("2.3.4-QUEST-1"), older,
-                new Version("3.0.1-QUEST-2"), newer
+                newestMigrationVersion, newer
         );
-        final Version currentVersion = new Version("3.2.0-QUEST-1");
-        final QuestMigrator migrator = new QuestMigrator(logger, Collections.emptyList(), migrationMap, currentVersion);
+        final Version fallback = new Version("3.2.0-QUEST-1");
+        final QuestMigrator migrator = new QuestMigrator(logger, Collections.emptyList(), migrationMap, fallback);
         migrator.migrate(quest);
         verifyNoInteractions(older);
         verify(newer, times(1)).migrate(any());
+    }
+
+    @Test
+    void set_migration_version() throws IOException, InvalidConfigurationException {
+        original.set(VERSION_PATH, "3.0.0-QUEST-0");
+        final Version migrationVersion = new Version("3.0.1-QUEST-2");
+        final Map<Version, QuestMigration> migrationMap = Map.of(migrationVersion, mock(QuestMigration.class));
+        final Version fallback = new Version("3.2.0-QUEST-1");
+        final Quest quest = setupQuest();
+        new QuestMigrator(logger, Collections.emptyList(), migrationMap, fallback).migrate(quest);
+        assertEquals(migrationVersion.getVersion(), quest.getQuestConfig().getString(VERSION_PATH),
+                "Fallback version should not be set with existing migrations.");
     }
 }
